# test_task_second-simple_game

./: CMakeLists.txt  Makefile  README.md  config.txt
include/SFML/Graphics/: Transformable.hpp  View.hpp
srcs/: config.txt  main.cpp  shooting_range.hpp  utils.cpp
srcs/classes/: A_projectile.cpp  A_projectile.hpp  I_target.cpp  I_target.hpp  bomb.cpp  bomb.hpp  cannon_t.cpp  cannon_t.hpp  canonball_t.cpp  canonball_t.hpp  gui.cpp  gui.hpp  interaction.cpp  interaction.hpp  interaction_objects.cpp  interaction_objects.hpp  logic.cpp  logic.hpp  scope_t.cpp  scope_t.hpp  target_c1.cpp  target_c1.hpp  target_c2.cpp  target_c2.hpp  wrap_window.cpp  wrap_window.hpp
srcs/classes/config/: Config.cpp  Config.hpp
